fixed layout bugs

--- a/src/components/App/styles/base.css
+++ b/src/components/App/styles/base.css
@@ -56,7 +56,7 @@ a {
   transition: color 0.15s ease;
 
   &:hover {
-    color: var(--link-color-hover);
+    color: var(--base-color);
     transition: color 0.15s ease;
   }
 }
