--- a/src/components/pages/CartPage/cartPage.module.scss
+++ b/src/components/pages/CartPage/cartPage.module.scss
@@ -118,8 +118,9 @@
 }
 
 .cart__restaurantName {
-  @include setTextStyle(700, 22px, 120%);
-  
+  @include setTextStyle(700, 28px, 120%);
+  color: $base-color;
+
   margin-bottom: 4px;
 }
 
@@ -133,11 +134,6 @@
     color: $base-color;
     transition: all $transition-long ease;
   }
-}
-
-.cart__restaurantLink {
-  color: $base-color;
-  font-size: 28px;
 }
 
 @media (max-width:1350px) {
