--- a/src/components/pages/CartPage/modal.module.scss
+++ b/src/components/pages/CartPage/modal.module.scss
@@ -14,11 +14,10 @@
   color: black;
 
   min-height: 250px;
-  width: 560px;
+  max-width: 560px;
 
   padding: 30px;
   margin: 0;
-  margin-right: 30px;
 
   background-image: url('.../../../../../../public/images/find-food/background.png');
   background-size: cover;
