--- a/src/components/pages/ProductPage/productPage.module.scss
+++ b/src/components/pages/ProductPage/productPage.module.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
 
   padding-top: 78px;
+  margin-bottom: 50px;
 }
 
 .placeholder {
