--- a/src/components/ui/buttons/ButtonOrder/buttonOrder.module.scss
+++ b/src/components/ui/buttons/ButtonOrder/buttonOrder.module.scss
@@ -1,23 +1,27 @@
 @import "../../../App/styles/variables";
 
 .buttonOrder {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
   @include setTextStyle(900, 18px, 100%);
   color: $white-color;
   text-align: center;
+  text-transform: uppercase;
 
-  width: 407px;
+  max-width: 407px;
   height: 60px;
+
+  padding: 21px 112px;
 
   background: linear-gradient(92.84deg, #ffb800 -47.72%, #ff8a00 136.81%);
   border-radius: $border-radius-8;
-  text-transform: uppercase;
   background-size: 200%;
 
   transition: all $transition-long ease;
-
-  &__icon {
-    margin-left: 10px;
-  }
 
   &:hover {
     background: linear-gradient(182.84deg, #ffb800 -47.72%, #ff8a00 136.81%);
